--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
     <header>
         <h2 id="light">Porto.</h2>
         <ul class="header-center">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="#">Who am i</a></li>
             <li><a href="blog.html">BLOG</a></li>
