--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
         <ul class="header-center">
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
-            <li><a href="#">Who am i</a></li>
+            <li><a href="index.html">Who am i</a></li>
             <li><a href="blog.html">BLOG</a></li>
             <li><a href="#">About</a></li>
         </ul>
