--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#">About</a></li>
         </ul>
         <button>Contact</button>
+        <button>New Button</button>
     </header>
     <script src="script.js"></script>
 </body>
