--- a/whoami.html
+++ b/whoami.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+
+  <head>
+    <title>WhoAmI</title>
     <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header>
+  </head>
+  
+  <body>
+     <header>
         <h2 id="light">Porto.</h2>
         <ul class="header-center">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="whoami.html">Who am i</a></li>
             <li><a href="blog.html">BLOG</a></li>
@@ -19,6 +17,7 @@
         </ul>
         <button>Contact</button>
     </header>
-    <script src="script.js"></script>
-</body>
+ 
+  </body>
+
 </html>
